# galaxy-core-deployment

./: Config.pm.patch  NODEJS_UPDATE.md  POST_INSTALLATION.md  POST_INSTALLATION_ABEL_MOUNT.md  POST_INSTALLATION_ABEL_MOUNT_reports.md  POST_INSTALLATION_INDEPENDENT.md  README.md  UNINSTALL_ROUTINE.md  as_galaxy_user.sh  config-filesender.php  configure_galaxy.sh  configure_galaxy_reports.sh  configure_galaxy_tool_setup.sh  deploy-galaxy-maintenance.sh  deploy-gold-root.sh  deploy-gold-user.sh  deploy-pdf-modules.sh  deploy.sh  deploy_DRMAA_poznan.sh  deploy_SLURM_MUNGE_rpm.sh  deploy_apache.sh  deploy_filesender_apache_config.sh  deploy_filesender_code.sh  deploy_filesender_galaxy_config.sh  deploy_filesender_simplesamlphp_code.sh  deploy_full_procedure.sh  deploy_full_procedure_reports.sh  deploy_postgresql.sh  deploy_tool_setup.sh  echo_passwd.sh  filesender.conf  galaxyd  galaxyprompt.sh  get_munge_rpms_from_nielshenrik.sh  get_slurm_rpms_from_nielshenrik.sh  job_resource_params_conf.xml  local_env.sh  php.conf  pre_slurm_RPM_install.sh  reports_galaxyd  (+10 more)
gold-2.2.0.5/: CHANGES  DATABASE  INSTALL  INSTALL.in  LICENSE  Makefile  Makefile.in  README  README.in  RELEASENOTES  UPGRADE  bank.gold  bank.gold.in  bank.sql  bank.sql.in  base.sql  base.sql.in  config.status  configure  configure.ac  info.gold  sssrmap3.xsd  start-gold.sh
gold-2.2.0.5/cgi-bin/styles/: gold.css  status.css
gold-2.2.0.5/contrib/: epilog.pl  prolog.pl
gold-2.2.0.5/doc/: FaultTolerance.doc  accounts.sgml  adaptivecopyright.sgml  adaptivelegalnotice.sgml  allocations.sgml  battellecopyright.sgml  battellelegalnotice.sgml  chargerates.sgml  configuration.sgml  customize.sgml  features.sgml  fixes.sgml  gettingadvanced.sgml  gettingstarted.sgml  goldsh.sgml  installation.sgml  installation.sgml.in  integration.sgml  jobs.sgml  machines.sgml  make.relnotes  migration.sgml  migration.sgml.in  overview.sgml  passwords.sgml  projects.sgml  quotations.sgml  releasenotes.sgml  relnotesoverview.sgml  reservations.sgml  roles.sgml  style.dsl  transactions.sgml  upgrade.sgml  upgrade.sgml.in  upgradefile.sgml  upgradefile.sgml.in  userguide.sgml  userguide.sgml.in  users.sgml
gold-2.2.0.5/doc/userguide/: book1.htm  c1008.htm  c1172.htm  c1298.htm  c137.htm  c1548.htm  c2027.htm  c2146.htm  c2280.htm  c2396.htm  c27.htm  c2890.htm  c3084.htm  c3152.htm  c3338.htm  c3410.htm  c3708.htm  c3976.htm  c4076.htm  c442.htm  c495.htm  c750.htm  f23.htm  x1051.htm  x1105.htm  x1148.htm  x1211.htm  x1241.htm  x1274.htm  x1363.htm  x1412.htm  x1497.htm  x1521.htm  x159.htm  x1626.htm  x1684.htm  x1754.htm  x1812.htm  x1854.htm  x1879.htm  (+89 more)
gold-2.2.0.5/etc/: gold-oscar.spec.in  gold.conf.dist  gold.conf.dist.in  gold.csh  gold.csh.in  gold.d  gold.sh  gold.sh.in  gold.spec  gold.spec.in  goldd.conf.dist  goldd.conf.dist.in  goldg.conf.dist  goldg.conf.dist.in
gold-2.2.0.5/lib/: Gold.pm  Gold.pm.in
gold-2.2.0.5/lib/Gold/: Assignment.pm  Bank.pm  Base.pm  CGI.pm  CGI.pm.in  Cache.pm  Chunk.pm  Client.pm  Condition.pm  Database.pm  Datum.pm  Exception.pm  Global.pm  Global.pm.in  Message.pm  Object.pm  Option.pm  Proxy.pm  Reply.pm  Request.pm  Response.pm  Selection.pm
gold-2.2.0.5/sbin/: goldd  sqlite
gold-2.2.0.5/src/: adminAction.cgi  autosuggest.js  balance.cgi  check_module.pl  create.cgi  delete.cgi  deposit.cgi  gauth.c  gbalance.pl  gchaccount.pl  gchalloc.pl  gcharge.pl  gchjob.pl  gchmachine.pl  gchpasswd.pl  gchproject.pl  gchquote.pl  gchres.pl  gchuser.pl  gdeposit.pl  glsaccount.pl  glsalloc.pl  glsjob.pl  glsmachine.pl  glsproject.pl  glsquote.pl  glsres.pl  glstxn.pl  glsuser.pl  gmkaccount.pl  gmkjob.pl  gmkmachine.pl  gmkproject.pl  gmkuser.pl  gold.cgi  gold_init.pl  gold_init.pl.in  goldd.pl  goldd.pl.in  goldj.c.in  (+46 more)
gold-2.2.0.5/src/CGI-Session-3.95/: Changes  MANIFEST  MYMETA.json  MYMETA.yml  Makefile  Makefile.PL  README
gold-2.2.0.5/src/CGI-Session-3.95/Session/: BluePrint.pm  Example.pm  Tutorial.pm
gold-2.2.0.5/src/CGI-Session-3.95/Session/ID/: Incr.pm  SHA1.pm
gold-2.2.0.5/src/CGI-Session-3.95/Session/Serialize/: Default.pm  FreezeThaw.pm  Storable.pm
gold-2.2.0.5/src/CGI-Session-3.95/blib/man3/: CGI::Session.3pm  CGI::Session::BluePrint.3pm  CGI::Session::CookBook.3pm  CGI::Session::DB_File.3pm  CGI::Session::Example.3pm  CGI::Session::File.3pm  CGI::Session::ID::Incr.3pm  CGI::Session::ID::MD5.3pm  (+7 more)
gold-2.2.0.5/src/Crypt-CBC-2.24/: CBC.pm  Changes  MANIFEST  META.yml  MYMETA.json  MYMETA.yml  Makefile
gold-2.2.0.5/src/Crypt-CBC-2.24/t/: Rijndael_compat.t  null_data.t
gold-2.2.0.5/src/Crypt-DES-2.05/: DES.c  DES.xs  META.yml  MYMETA.json  MYMETA.yml  Makefile  README  test.pl
gold-2.2.0.5/src/Crypt-DES_EDE3-0.01/: MYMETA.json  MYMETA.yml  Makefile
gold-2.2.0.5/src/Data-Properties-0.02/: MYMETA.json  MYMETA.yml  Makefile
gold-2.2.0.5/src/Digest-SHA1-2.07/: Makefile  SHA1.c  SHA1.pm  SHA1.xs
gold-2.2.0.5/src/Log-Dispatch-2.21/: Makefile
gold-2.2.0.5/src/Log-Dispatch-FileRotate-1.16/: Makefile
gold-2.2.0.5/src/Log-Log4perl-1.14/: META.yml  MYMETA.json  MYMETA.yml  Makefile
gold-2.2.0.5/src/Module-Build-0.2808/: Build  Build.PL  MANIFEST  Makefile  README  SIGNATURE
gold-2.2.0.5/src/Module-Build-0.2808/_build/: auto_features  build_params  cleanup  magicnum  prereqs  runtime_params
gold-2.2.0.5/src/Params-Validate-0.89/: MANIFEST  META.yml  Makefile  Validate.c
gold-2.2.0.5/src/Term-ReadLine-Gnu-1.15/: Gnu.c  Gnu.pm  Gnu.xs  INSTALL  MANIFEST  META.yml  MYMETA.json  MYMETA.yml  Makefile  Makefile.PL  README  rlver  rlver.c  typemap
gold-2.2.0.5/src/Term-ReadLine-Gnu-1.15/eg/: fileman  perlsh  pftp  ptksh+
gold-2.2.0.5/src/Term-ReadLine-Gnu-1.15/t/: button.pl  callback.t  history.t  readline.t
gold-2.2.0.5/test/: bank_2.1_to_2.2.pl  gettingstarted.sh
(+146 files in other folders)
